--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <button onclick="get()">GET (todos)</button>
     <button onclick="getID()">GET id</button>
     <button onclick="POST()">POST</button>
+    <button onclick="PUT()">PUT</button>
+    <button onclick="PATCH()">Cambiar nombre</button>
     <script src="main.js"></script>
 </body>
 </html>
